[package]
name = "cleverhouse-by-akrutikov"
version = "0.1.6"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "OTUS Rust course homework project"
repository = "https://github.com/sanblch/cleverhouse"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
