[package]
name = "cleverhouse-by-akrutikov"
version = "0.1.7"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "OTUS Rust course homework project"
repository = "https://github.com/sanblch/cleverhouse"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
thiserror = "1.0.30"